<resources>
    <string name="app_name">Healthy Boba</string>

    <string-array name="brands">
        <item>Koi</item>
        <item>Gong Cha</item>
        <item>LiHO</item>
    </string-array>

    <string-array name="koi">
        <item>Milk Tea</item>
        <item>Caramel Milk Tea</item>
        <item>Golden Bubble Milk Tea</item>
        <item>Honey Milk Tea</item>
        <item>Ovaltine</item>
    </string-array>

    <string-array name="gongcha">
        <item>Milk Tea</item>
        <item>Caramel Milk Tea</item>
        <item>Brown Sugar Milk Tea</item>
        <item>Winter Melon Milk Tea</item>
        <item>Strawberry Milk Tea</item>
        <item>Earl Grey Milk Tea</item>
    </string-array>

    <string-array name="liho">
        <item>Milk Tea</item>
        <item>Caramel Milk Tea</item>
        <item>Earl Grey Milk Tea</item>
        <item>Brown Sugar Milk Tea</item>
        <item>Taro Milk</item>
        <item>Golden Avocado</item>
    </string-array>

    <string-array name="koicalories">
        <item>Calories: 265-315 kcal</item>
        <item>Calories: 270-315 kcal</item>
        <item>Calories: 290-330 kcal</item>
        <item>Calories: 290-330 kcal</item>
        <item>Calories: 290-330 kcal</item>
    </string-array>

    <string-array name="gccalories">
        <item>Calories: 265-315 kcal</item>
        <item>Calories: 270-315 kcal</item>
        <item>Calories: 290-390 kcal</item>
        <item>Calories: 150-175 kcal</item>
        <item>Calories: 290-330 kcal</item>
        <item>Calories: 315-355 kcal</item>
    </string-array>

    <string-array name="lihocalories">
        <item>Calories: 265-315 kcal</item>
        <item>Calories: 270-315 kcal</item>
        <item>Calories: 315-355 kcal</item>
        <item>Calories: 290-390 kcal</item>
        <item>Calories: 290-330 kcal</item>
        <item>Calories: 290-330 kcal</item>
    </string-array>

    <string-array name="topping_cal">
        <item>Pearl: 148 kcal\nWhite Pearl: 28 kcal\nAloe Vera: 16 kcal\nCoconut Jelly: 45 kcal\nTaro Q: 45 kcal</item>
    </string-array>

    <string name="username">Name</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register">Register here</string>
    <string name="toggleOn">show</string>
    <string name="toggleOff">hide</string>
    <string name="re_enter">Re-enter password</string>
    <string name="enterName">Enter your name</string>
    <string name="accountCreation">Create Account</string>
    <string name="welcomeMsg">Welcome to Healthy Boba</string>

    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="location">Location</string>
    <string name="tracker">Tracker</string>
    <string name="title_activity_liho">Map</string>
    <string name="title_activity_gong_cha">Map</string>
    <string name="title_activity_koi">Map</string>

</resources>
